# prompt-master-ai

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yaml  時序圖.md
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  GEMINI.md  SPEC.md  pyproject.toml  requirements.txt  後端開發流程圖.md
backend/alembic/: env.py
backend/alembic/versions/: 33b5b5fc9b39_init_migration.py  7ba33109fd62_add_default_templates.py
backend/app/: __main__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  auth.py  health.py  history.py  models.py  optimize.py  prompt.py  templates.py
backend/app/models/: __init__.py  prompt_history.py  template.py  token_blacklist.py  user.py  user_preferences.py
backend/app/schemas/: history.py  model.py  optimize.py  prompt.py  template.py  user.py
backend/app/services/: gemini_client.py  mcp_server.py  prompt_optimizer.py  redis_client.py
backend/app/utils/: __init__.py  blacklist.py  redis_client.py  security.py  token.py
backend/tests/: conftest.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  SPEC.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.spa.ts  vite.config.ts
frontend/app/: routeTree.gen.ts  ssr.tsx
frontend/app/components/: api-key-input.tsx  prompt-optimizer.tsx  template-form.tsx  template-selector.tsx
frontend/app/components/ui/: tabs.tsx
frontend/app/routes/: __root.tsx  index.tsx
frontend/app/routes/history/: index.tsx
frontend/app/routes/prompt/: index.tsx
frontend/app/routes/templates/: index.tsx
frontend/src/: routeTree.gen.ts  router.tsx
frontend/src/components/: DefaultCatchBoundary.tsx  api-key-input.tsx  frequently-asked-questions.tsx  page-layout.tsx  prompt-optimizer.tsx  template-card.tsx  template-form.tsx  template-manager.tsx  template-selector.tsx
frontend/src/hooks/: useAppSession.ts  useAuth.ts  useAuthStore.ts  useCookie.ts  useFetch.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/auth/: index.tsx
frontend/src/routes/history/: index.tsx
frontend/src/routes/optimizer/: index.tsx
frontend/src/routes/templates/: index.tsx
frontend/src/stores/: useAPIKeyStore.ts  useAuthStore.ts  useTemplateStore.ts
frontend/src/types/: auth.ts  history.ts  model.ts  optimize.ts  template.ts
frontend/src/utils/: api.ts  crypto.ts  db.ts  decode.ts  encode.ts  env.ts  error.ts  index.ts  query.ts  seo.ts
frontend/test/: crypto.test.ts
