[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "argon2-cffi>=23.1.0",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.4.0",
    "sqlmodel>=0.0.24",
]
